Fix member list margin on smaller screens

--- a/styles/index.less
+++ b/styles/index.less
@@ -848,6 +848,12 @@ a.ui-btn {
   }
 }
 
+@media (max-width: 800px) {
+  #member-container {
+    margin: 2rem 0rem 1rem 0rem;
+  }
+}
+
 @media (max-width: 650px) { 
     .calendar {
       padding: 1.5em;
